[package]
name = "hambur"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
futures = "0.3.31"
dotenv = "0.15.0"
tokio-stream = "0.1.17"
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
futures-timer = "3.0.2"
